# grandmaster

./: .env  .gitignore  README.md  check_env.py  main.py  pyproject.toml  verify_agent.py  verify_ev.py
.agent/rules/: navigator_rules.md
src/agents/: graph.py  state.py
src/engine/: calculator.py  input_handler.py  models.py  session.py
tests/: test_engine.py
