[project]
name = "grandmaster"
version = "0.1.0"
description = "A production-grade Strategy Navigator"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langgraph",
    "langsmith",
    "pydantic",
    "pytest",
    "python-dotenv",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
